# ASVNEngine

./: .gitignore  CMakeLists.txt
include/: Client.hpp  Console.hpp  Engine.hpp  Launcher.hpp
include/Base/: FileNotFound.hpp  FileSystemError.hpp  IError.hpp  IModule.hpp  ResultOrError.hpp
include/Client/: IClient.hpp
include/Engine/: IConsole.hpp  IEngine.hpp  Transform.hpp
include/FIleSystem/: IFileSystem.hpp
include/FileSystem/: IFile.hpp  IFileSystem.hpp
include/GUI/: IGUI.hpp  IGUIElement.hpp  IScreen.hpp
include/Launcher/: ILauncher.hpp
include/OpenGL/: Image.hpp  Render.hpp  Shader.hpp  Sprite.hpp
include/Platform/: IPlatform.hpp  IWindow.hpp
shaders/: DefaultSpriteShader.slang
src/: CMakeLists.txt
src/Client/: CMakeLists.txt  Client.cpp  Entry.cpp  QEngineViewport.cpp
src/Client/Screens/: Console.qml
src/Client/include/: QEngineViewport.hpp
src/OpenGL/: CMakeLists.txt  Entry.cpp  Image.cpp  Render.cpp  Shader.cpp  Sprite.cpp  gl.c
src/VulkanRender/: CMakeLists.txt  Entry.cpp  Image.cpp  Render.cpp  Shader.cpp
src/VulkanRender/VulkanAPI/: AbstractImage.cpp  AbstractImage.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  Depth.cpp  Depth.hpp  Device.cpp  Device.hpp  GeometryDrawingShader.slang  Image.cpp  Image.hpp  Memory.cpp  Memory.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  PhysicalDeviceManager.cpp  PhysicalDeviceManager.hpp  SSBO.cpp  SSBO.hpp  Shader.cpp  Shader.hpp  Swapchain.cpp  Swapchain.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexBuffer.cpp  VertexBuffer.hpp  Vulkan.hpp
(+37 files in other folders)
